<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_inside">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/cft" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/cell_shape"
                    android:paddingLeft="5dp"
                    android:text="@string/cft_about"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/cft1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="FieldWeb"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/cell_shape"
                    android:paddingLeft="5dp"
                    android:text="@string/cft1"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"

                    android:background="@drawable/cft2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Technology-Cost Optimization"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/cell_shape"
                    android:paddingLeft="5dp"
                    android:text="@string/cft2"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/cft3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Information Security"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/cell_shape"
                    android:paddingLeft="5dp"
                    android:text="@string/cft3"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>