<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f7f7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_name_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rectangle"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Employee Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_id_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="@string/eid"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="Age"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_age_details"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Age"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_gender"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="Status"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/switch1"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_blood"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BloodGroup"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Department:"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_dep_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dep"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Designation:"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_des_details"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="des"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView_spinner"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Documents: "
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_document"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:tooltipText="documents">

                </Spinner>
            </TableRow>

            <TextView
                android:id="@+id/textView_contact_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:autoLink="phone"
                android:linksClickable="true"
                android:gravity="center"

                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_email_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:autoLink="email"
                android:gravity="center"
                android:text="@string/Email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="Temporary Address:"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textView_address_details_par"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/rectangle"
                android:drawableRight="@drawable/ic_location_on_black_24dp"
                android:paddingLeft="10dp"
                android:text="@string/Temp_address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="Permanent Address:"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_address_details_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/rectangle"
                android:drawableRight="@drawable/ic_location_on_black_24dp"
                android:paddingLeft="10dp"
                android:text="@string/per_address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:text="About:"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/rectangle">

                <TextView
                    android:id="@+id/textView_about_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:text="@string/details"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </android.support.v4.widget.NestedScrollView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>